# sqlguardjs

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  launch_post.md  security_remediation_plan.md
.github/workflows/: ci.yml  publish.yml
.supergoal/start-building-7y3DQV/: ROADMAP.md  STATE.md  THINKING.md  applied-memories.md  context.md  repo-map.md  tools.md
.supergoal/start-building-7y3DQV/phases/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
dataset/: tokenizer.json
npm/: README.md  index.d.ts  package-lock.json  package.json
npm/__tests__/: adversarial.test.js  benign.test.js  cli.test.js  corpus.test.js  detector.test.js  expressIntegration.test.js  fuzz.test.js  hardening.test.js  headers.test.js  package.test.js  rateLimiter.test.js
npm/benchmarks/: latency.js
npm/examples/: minimal-express.js  production-express.js
npm/src/: detector.js  rateLimiter.js
python/: README.md  pyproject.toml
python/dataset/: create_dataset.py  predict.py  train_model.py
python/src/sqlguard_ml/: __init__.py  api.py  cli.py  detector.py
python/src/sqlguard_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/src/sqlguard_ml/models/: stub_model.pkl
python/src/sqlguard_ml/static/: index.html
python/src/sqlguardjs/: __init__.py  api.py  artifacts.py  cli.py  detector.py  train_stub.py
python/src/sqlguardjs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/src/sqlguardjs/models/: stub_model.pkl  stub_vectorizer.pkl
python/tests/: test_api.py  test_cli.py  test_detector.py
test_integration/: package-lock.json  package.json  server.js
