[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlguard_ml"
version = "1.0.1"
description = "TensorFlow SQLi/XSS detector"
dependencies = [
    "tensorflow",
    "keras>=3.15.0",
    "numpy",
    "fastapi",
    "scikit-learn"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
sqlguard = "sqlguard_ml.cli:main"

