[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlguardjs"
version = "1.0.1"
description = "SQLGuardJS Python reference detector"
dependencies = [
    "tensorflow",
    "keras>=3.15.0",
    "numpy",
    "fastapi",
    "uvicorn",
    "scikit-learn"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
sqlguardjs = "sqlguardjs.cli:main"

